--- a/products/equipment/index.html
+++ b/products/equipment/index.html
@@ -88,35 +88,69 @@
       --shadow-1:0 8px 26px rgba(2,8,20,.06);
       --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
+      --header-h:64px;
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
     body{font-family:'Noto Sans Thai',system-ui,sans-serif;color:var(--ink);background:var(--bg);line-height:1.6}
 
-    /* === Top Header (logo + menu) === */
+    /* === Overlay Top Nav (เหมือนหน้าโฮม) === */
     .site-header{
-      position:sticky; top:0; z-index:1000;
-      backdrop-filter:saturate(140%) blur(8px);
-      background:rgba(255,255,255,.78);
-      border-bottom:1px solid #e6ece8;
+      position:absolute; top:0; left:0; right:0; z-index:1400;
+      background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,0));
+      border-bottom:1px solid rgba(255,255,255,.14);
     }
-    .nav-bar{
-      max-width:1200px; margin:0 auto; padding:10px 16px;
-      display:flex; align-items:center; gap:14px; justify-content:space-between;
+    .site-header .header-inner{
+      max-width:1200px; margin:0 auto;
+      display:flex; align-items:center; justify-content:space-between;
+      min-height:var(--header-h); padding:10px 16px;
     }
     .brand{display:flex; align-items:center; gap:10px; text-decoration:none}
-    .brand-logo{width:38px;height:38px;border-radius:10px;background:var(--brand);background-image:var(--logo-url);background-size:cover;background-position:center; box-shadow:0 3px 10px rgba(0,0,0,.2)}
-    .brand-name{font-weight:800; color:#1d2b23}
-    .primary-nav{display:flex; gap:14px; flex-wrap:wrap}
-    .primary-nav a{
-      text-decoration:none; color:#1f2a24; padding:8px 10px; border-radius:10px; font-weight:600;
+    .brand-logo{
+      width:42px;height:42px;border-radius:10px;flex:0 0 42px;
+      background:#e8f1ec var(--logo-url) center/cover no-repeat;
+      box-shadow:0 2px 8px rgba(2,8,20,.15)
     }
-    .primary-nav a:hover{ background:#ecf4ef }
-    @media(max-width:760px){ .brand-name{display:none} }
+    .brand-name{font-weight:800; color:#fff; font-size:1.02rem; letter-spacing:.2px}
 
-    /* === Floating Language Switcher === */
+    .primary-nav{display:flex; align-items:center; gap:12px}
+    .menu{list-style:none; display:flex; gap:8px; margin:0; padding:0}
+    .menu a{
+      display:inline-block; padding:10px 12px; border-radius:10px;
+      color:#fff; text-decoration:none; font-weight:600;
+    }
+    .menu a:hover{ background:rgba(255,255,255,.12) }
+    .menu a[aria-current="page"]{ background:rgba(255,255,255,.18) }
+    .menu a.cta{ border:1px solid rgba(255,255,255,.35) }
+    .menu a.cta:hover{ background:#fff; color:#0f172a; border-color:#fff }
+
+    .nav-toggle{
+      appearance:none; border:0; background:transparent; cursor:pointer;
+      width:38px; height:38px; border-radius:9px; display:none; align-items:center; justify-content:center;
+    }
+    .nav-toggle:focus-visible{ outline:2px solid #ffffff; outline-offset:2px }
+    .nav-toggle .bar{ position:relative; width:22px; height:2px; background:#fff; border-radius:2px }
+    .nav-toggle .bar::before,.nav-toggle .bar::after{
+      content:""; position:absolute; left:0; right:0; height:2px; background:#fff; border-radius:2px
+    }
+    .nav-toggle .bar::before{ top:-7px } .nav-toggle .bar::after{ top:7px }
+
+    @media (max-width: 920px){
+      .menu{
+        position:fixed; left:12px; right:12px; top:calc(var(--header-h) + 8px);
+        background:#0f172acc; backdrop-filter: blur(8px);
+        border:1px solid rgba(255,255,255,.18); border-radius:14px;
+        transform:translateY(-12px); opacity:0; pointer-events:none;
+        display:grid; gap:6px; padding:12px; transition:transform .2s ease, opacity .2s ease;
+      }
+      .menu li a{ display:block; padding:12px 14px; border-radius:10px }
+      .site-header.open .menu{ transform:none; opacity:1; pointer-events:auto }
+      .nav-toggle{ display:inline-flex }
+    }
+
+    /* === Language Switcher (เลี่ยงหัวเว็บ) === */
     .lang-fab{
-      position:fixed; top:14px; right:14px; z-index:1100; display:flex; gap:6px;
+      position:fixed; top:calc(var(--header-h) + 10px); right:14px; z-index:1100; display:flex; gap:6px;
       padding:4px; border:1px solid #e2e8f0; border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px);
       box-shadow:0 10px 26px rgba(2,8,20,.12);
     }
@@ -137,12 +171,12 @@
     .hero h1{margin:0 0 10px;font-weight:800;font-size:clamp(26px,4.2vw,44px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
     .back-home{
-      display:inline-flex; align-items:center; gap:6px; margin-top:14px;
+      display:inline-flex; align-items:center; gap:6px; margin-bottom:10px;
       padding:8px 12px; border-radius:999px; font-weight:800; text-decoration:none;
-      background: #ffffff1a; border:1px solid #ffffff55; color:#fff;
+      background:#ffffffcc; border:1px solid #e2e8f0; color:#0f172a;
       backdrop-filter: blur(4px);
     }
-    .back-home:hover{ background:#ffffff2a; border-color:#ffffff90 }
+    .back-home:hover{ background:#fff }
 
     /* === Layout === */
     .wrap{max-width:1200px;margin:auto;padding:34px 16px}
@@ -189,24 +223,33 @@
 </head>
 <body>
 
-  <!-- === Top Header (logo + menu) === -->
-  <header class="site-header" role="banner" aria-label="Site header">
-    <div class="nav-bar">
-      <a class="brand" href="/" aria-label="Baume Chemical Home">
+  <!-- === Site Header (Top Navigation Overlay) === -->
+  <header class="site-header" role="banner">
+    <div class="header-inner">
+      <!-- Brand -->
+      <a class="brand" href="/" aria-label="Baume Chemical">
         <span class="brand-logo" aria-hidden="true"></span>
         <span class="brand-name">Baume Chemical</span>
       </a>
+
+      <!-- Hamburger (mobile) -->
+      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+        <span class="bar" aria-hidden="true"></span>
+      </button>
+
+      <!-- Primary Navigation -->
       <nav class="primary-nav" aria-label="Primary">
-        <a href="https://www.baumechemical.com/products/pretreatment/" data-i18n-key="nav_pretreat">Pretreatment</a>
-        <a href="https://www.baumechemical.com/products/platingcoating/" data-i18n-key="nav_plating">Plating</a>
-        <a href="https://www.baumechemical.com/products/blackening/" data-i18n-key="nav_black">Blackening</a>
-        <a href="https://www.baumechemical.com/products/passivation/" data-i18n-key="nav_pass">Passivation</a>
-        <a href="https://www.baumechemical.com/products/equipment/" data-i18n-key="nav_equipment" aria-current="page">Equipment</a>
+        <ul class="menu">
+          <li><a href="/" class="nav-link">Home</a></li>
+          <li><a href="/about-us.html" class="nav-link">About us</a></li>
+          <li><a href="/products.html" class="nav-link" aria-current="page">Products</a></li>
+          <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
-  <!-- === Language Switcher === -->
+  <!-- === Floating Language Switcher === -->
   <div class="lang-fab" role="group" aria-label="Language switcher">
     <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
       <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH">
@@ -333,8 +376,19 @@
     </div>
   </footer>
 
-  <!-- === JS: reveal + i18n === -->
+  <!-- === JS: menu toggle + reveal + i18n === -->
   <script>
+    // Mobile nav toggle
+    (function(){
+      var header = document.querySelector('.site-header');
+      var toggle = document.querySelector('.site-header .nav-toggle');
+      if(!header || !toggle) return;
+      toggle.addEventListener('click', function(){
+        var opened = header.classList.toggle('open');
+        toggle.setAttribute('aria-expanded', String(opened));
+      });
+    })();
+
     // Reveal on scroll
     const revealEls = document.querySelectorAll('.reveal');
     const revObs = new IntersectionObserver((entries,obs)=>{
@@ -345,7 +399,6 @@
     /* i18n dictionary */
     const I18N = {
       th: {
-        nav_pretreat:"Pretreatment", nav_plating:"Plating", nav_black:"Blackening", nav_pass:"Passivation", nav_equipment:"Equipment",
         back_home:"← กลับหน้าแรก",
         hero_title: "วัสดุอุปกรณ์",
         hero_tagline: "เครื่องมือและอุปกรณ์สำหรับงานชุบโลหะและห้องปฏิบัติการ",
@@ -364,7 +417,6 @@
         footer_copy: "© 2025 Baume Chemical. All rights reserved."
       },
       en: {
-        nav_pretreat:"Pretreatment", nav_plating:"Plating", nav_black:"Blackening", nav_pass:"Passivation", nav_equipment:"Equipment",
         back_home:"← Back to Home",
         hero_title: "Equipment",
         hero_tagline: "Tools and equipment for metal plating and laboratory work",
