--- a/products/service/index.html
+++ b/products/service/index.html
@@ -73,14 +73,66 @@
       --shadow-1:0 8px 26px rgba(2,8,20,.06);
       --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
+      --header-h:64px;
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
     body{font-family:'Noto Sans Thai',system-ui,sans-serif;color:var(--ink);background:var(--bg);line-height:1.6}
 
-    /* === Language Switcher === */
+    /* === Overlay Top Nav (เหมือนหน้าโฮม) === */
+    .site-header{
+      position:absolute; top:0; left:0; right:0; z-index:1400;
+      background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,0));
+      border-bottom:1px solid rgba(255,255,255,.14);
+    }
+    .site-header .header-inner{
+      max-width:1200px; margin:0 auto;
+      display:flex; align-items:center; justify-content:space-between;
+      min-height:var(--header-h); padding:10px 16px;
+    }
+    .brand{display:flex; align-items:center; gap:10px; text-decoration:none}
+    .brand-logo{
+      width:42px;height:42px;border-radius:10px;flex:0 0 42px;
+      background:#e8f1ec var(--logo-url) center/cover no-repeat;
+      box-shadow:0 2px 8px rgba(2,8,20,.15)
+    }
+    .brand-name{font-weight:800; color:#fff; font-size:1.02rem; letter-spacing:.2px}
+    .primary-nav{display:flex; align-items:center; gap:12px}
+    .menu{list-style:none; display:flex; gap:8px; margin:0; padding:0}
+    .menu a{
+      display:inline-block; padding:10px 12px; border-radius:10px;
+      color:#fff; text-decoration:none; font-weight:600;
+    }
+    .menu a:hover{ background:rgba(255,255,255,.12) }
+    .menu a[aria-current="page"]{ background:rgba(255,255,255,.18) }
+    .menu a.cta{ border:1px solid rgba(255,255,255,.35) }
+    .menu a.cta:hover{ background:#fff; color:#0f172a; border-color:#fff }
+    .nav-toggle{
+      appearance:none; border:0; background:transparent; cursor:pointer;
+      width:38px; height:38px; border-radius:9px; display:none; align-items:center; justify-content:center;
+    }
+    .nav-toggle:focus-visible{ outline:2px solid #ffffff; outline-offset:2px }
+    .nav-toggle .bar{ position:relative; width:22px; height:2px; background:#fff; border-radius:2px }
+    .nav-toggle .bar::before,.nav-toggle .bar::after{
+      content:""; position:absolute; left:0; right:0; height:2px; background:#fff; border-radius:2px
+    }
+    .nav-toggle .bar::before{ top:-7px } .nav-toggle .bar::after{ top:7px }
+    @media (max-width: 920px){
+      .menu{
+        position:fixed; left:12px; right:12px; top:calc(var(--header-h) + 8px);
+        background:#0f172acc; backdrop-filter: blur(8px);
+        border:1px solid rgba(255,255,255,.18); border-radius:14px;
+        transform:translateY(-12px); opacity:0; pointer-events:none;
+        display:grid; gap:6px; padding:12px; transition:transform .2s ease, opacity .2s ease;
+      }
+      .menu li a{ display:block; padding:12px 14px; border-radius:10px }
+      .site-header.open .menu{ transform:none; opacity:1; pointer-events:auto }
+      .nav-toggle{ display:inline-flex }
+    }
+
+    /* === Language Switcher (เลี่ยงหัวเว็บ) === */
     .lang-fab{
-      position:fixed; top:14px; right:14px; z-index:1100; display:flex; gap:6px;
+      position:fixed; top:calc(var(--header-h) + 10px); right:14px; z-index:1100; display:flex; gap:6px;
       padding:4px; border:1px solid #e2e8f0; border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px);
       box-shadow:0 10px 26px rgba(2,8,20,.12);
     }
@@ -99,6 +151,13 @@
     }
     .hero h1{margin:0 0 10px;font-weight:800;font-size:clamp(26px,4.2vw,44px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
+    .back-home{
+      display:inline-flex; align-items:center; gap:8px;
+      margin-bottom:10px; padding:6px 12px; border-radius:999px;
+      background:#ffffffcc; color:#0f172a; border:1px solid #e2e8f0;
+      text-decoration:none; font-weight:800; backdrop-filter: blur(6px);
+    }
+    .back-home:hover{ background:#fff }
 
     /* === Layout === */
     .wrap{max-width:1200px;margin:auto;padding:34px 16px}
@@ -143,7 +202,35 @@
   </style>
 </head>
 <body>
-  <!-- === Language Switcher === -->
+
+  <!-- === Site Header (Top Navigation) === -->
+  <header class="site-header" role="banner">
+    <div class="header-inner">
+      <!-- Brand -->
+      <a class="brand" href="/" aria-label="Baume Chemical">
+        <span class="brand-logo" aria-hidden="true"></span>
+        <span class="brand-name">Baume Chemical</span>
+      </a>
+
+      <!-- Hamburger (mobile) -->
+      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+        <span class="bar" aria-hidden="true"></span>
+      </button>
+
+      <!-- Primary Navigation -->
+      <nav class="primary-nav" aria-label="Primary">
+        <ul class="menu">
+          <li><a href="/" class="nav-link">Home</a></li>
+          <li><a href="/about-us.html" class="nav-link">About us</a></li>
+          <!-- บนเพจหมวด Products ให้ active ที่ Products -->
+          <li><a href="/products.html" class="nav-link" aria-current="page">Products</a></li>
+          <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- === Floating Language Switcher === -->
   <div class="lang-fab" role="group" aria-label="Language switcher">
     <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
       <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH">
@@ -158,6 +245,7 @@
   <!-- === Hero === -->
   <header class="hero">
     <div class="wrap" style="padding:22px 16px">
+      <a class="back-home" href="/" data-i18n-key="back_home" aria-label="Back to home">← กลับหน้าแรก</a>
       <h1 data-i18n-key="hero_title">บริการลูกค้า</h1>
       <p data-i18n-key="hero_tagline">
         วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test) ทดสอบ Salt Spray และที่ปรึกษากระบวนการชุบ โดยทีมชำนาญการ 30+ ปี
@@ -276,8 +364,19 @@
     </div>
   </footer>
 
-  <!-- === JS: reveal + i18n === -->
+  <!-- === JS: menu toggle + reveal + i18n === -->
   <script>
+    // Mobile nav toggle
+    (function(){
+      var header = document.querySelector('.site-header');
+      var toggle = document.querySelector('.site-header .nav-toggle');
+      if(!header || !toggle) return;
+      toggle.addEventListener('click', function(){
+        var opened = header.classList.toggle('open');
+        toggle.setAttribute('aria-expanded', String(opened));
+      });
+    })();
+
     // Reveal on scroll
     const revealEls = document.querySelectorAll('.reveal');
     const revObs = new IntersectionObserver((entries,obs)=>{
@@ -288,6 +387,7 @@
     /* i18n dictionary */
     const I18N = {
       th: {
+        back_home: "← กลับหน้าแรก",
         hero_title: "บริการลูกค้า",
         hero_tagline: "วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test) ทดสอบ Salt Spray และที่ปรึกษากระบวนการชุบ โดยทีมชำนาญการ 30+ ปี",
         sec_services: "บริการ",
@@ -305,6 +405,7 @@
         footer_copy: "© 2025 Baume Chemical. All rights reserved."
       },
       en: {
+        back_home: "← Back to Home",
         hero_title: "Customer Service",
         hero_tagline: "Solution analysis, AA metal test, salt spray testing, and plating process consulting by a team with 30+ years’ experience.",
         sec_services: "Services",
@@ -329,13 +430,14 @@
     };
 
     function applyLang(lang){
-      document.documentElement.lang = lang === 'en' ? 'en' : 'th';
-      els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === lang)));
+      const sel = (lang === 'en') ? 'en' : 'th';
+      document.documentElement.lang = sel;
+      els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === sel)));
       els.translatables().forEach(node => {
         const key = node.getAttribute('data-i18n-key');
-        if (key && I18N[lang] && I18N[lang][key]) node.textContent = I18N[lang][key];
+        if (key && I18N[sel] && I18N[sel][key]) node.textContent = I18N[sel][key];
       });
-      try{ localStorage.setItem('lang', lang); }catch(e){}
+      try{ localStorage.setItem('lang', sel); }catch(e){}
     }
 
     (function initLang(){
