--- a/404.html
+++ b/404.html
@@ -123,10 +123,10 @@
       </button>
       <nav class="primary-nav" aria-label="Primary">
         <ul class="menu">
-          <li><a href="/">Home</a></li>
-          <li><a href="/about-us.html">About us</a></li>
-          <li><a href="/products.html">Products</a></li>
-          <li><a href="/contact-us.html">Contact Us</a></li>
+          <li><a href="https://www.baumechemical.com/index.html">Home</a></li>
+          <li><a href="https://www.baumechemical.com/about-us.html">About us</a></li>
+          <li><a href="https://www.baumechemical.com/products.html">Products</a></li>
+          <li><a href="https://www.baumechemical.com/contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
     </div>
