--- a/products/passivation/index.html
+++ b/products/passivation/index.html
@@ -179,10 +179,10 @@
       <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false"><span class="bar" aria-hidden="true"></span></button>
       <nav class="primary-nav" aria-label="Primary">
         <ul class="menu">
-          <li><a href="/index.html" class="nav-link">Home</a></li>
-          <li><a href="/about-us.html" class="nav-link">About us</a></li>
-          <li><a href="/products.html" class="nav-link" aria-current="page">Products</a></li>
-          <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+          <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
+          <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
+          <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
+          <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
         </ul>
       </nav>
     </div>
