upload all files

--- a/aluminum-electropolishing-solution.html
+++ b/aluminum-electropolishing-solution.html
@@ -7,7 +7,7 @@
 <!-- === SEO: Title, Description, Canonical, OG/Twitter === -->
 <title data-i18n-key="meta_title">EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing) | Baume Chemical</title>
 <meta name="description" content="EP 8539 ช่วยให้ผิวอลูมิเนียมเรียบเงา ลบคม ไม่เกิดควัน NOx ช่วงทำงาน 65–80 °C, 12–24 V, 20–80 A/dm² ภายใน 2–16 นาที พร้อมแนวทางดูแลบ่อและข้อกำหนดอุปกรณ์">
-<link rel="canonical" href="https://www.baumechemical.com/ep-8539.html">
+<link rel="canonical" href="https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html">
 <meta name="robots" content="index,follow,max-image-preview:large">
 <meta name="theme-color" content="#2c5e4e">
 
@@ -17,7 +17,7 @@
 <meta property="og:locale:alternate" content="en_US">
 <meta property="og:title" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing)">
 <meta property="og:description" content="ผิวเงาแบบกระจก ลบคมไว ไม่มีควัน NOx • 65–80 °C • 12–24 V • 20–80 A/dm² • 2–16 นาที">
-<meta property="og:url" content="https://www.baumechemical.com/ep-8539.html">
+<meta property="og:url" content="https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html">
 <meta property="og:image" content="https://i.imgur.com/HTuaHH8.jpeg">
 <meta property="og:image:alt" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม">
 <meta name="twitter:card" content="summary_large_image">
@@ -39,8 +39,8 @@
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.baumechemical.com/ep-8539.html#webpage",
-      "url": "https://www.baumechemical.com/ep-8539.html",
+      "@id": "https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html#webpage",
+      "url": "https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html",
       "name": "EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing) | Baume Chemical",
       "inLanguage": "th",
       "primaryImageOfPage": "https://i.imgur.com/HTuaHH8.jpeg",
@@ -55,21 +55,21 @@
     },
     {
       "@type": "Product",
-      "@id": "https://www.baumechemical.com/ep-8539.html#product",
+      "@id": "https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html#product",
       "name": "EP 8539",
       "description": "น้ำยากัดเงาอลูมิเนียม (Electropolishing) ให้ผิวเงา ลบคม ไม่มีควัน NOx ช่วงทำงานกว้าง",
       "category": "Aluminum Electropolishing Chemistry",
       "brand": { "@type": "Brand", "name": "Baume Chemical" },
       "image": "https://i.imgur.com/HTuaHH8.jpeg",
-      "url": "https://www.baumechemical.com/ep-8539.html"
+      "url": "https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html"
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.baumechemical.com/ep-8539.html#breadcrumb",
+      "@id": "https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html#breadcrumb",
       "itemListElement": [
         { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
         { "@type": "ListItem", "position": 2, "name": "Polishing", "item": "https://www.baumechemical.com/polishing.html" },
-        { "@type": "ListItem", "position": 3, "name": "EP 8539", "item": "https://www.baumechemical.com/ep-8539.html" }
+        { "@type": "ListItem", "position": 3, "name": "EP 8539", "item": "https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html" }
       ]
     }
   ]
