upload all files

--- a/contact-us.html
+++ b/contact-us.html
@@ -342,7 +342,7 @@
       <h1 data-i18n-key="hero_title">ติดต่อเรา</h1>
       <p data-i18n-key="hero_tagline">โปรดใส่อีเมลของคุณ แล้วเราจะติดต่อกลับโดยเร็วที่สุด</p>
       <div class="actions">
-        <a class="btn ghost" href="mailto:baumechemical@gmail.com" data-i18n-key="btn_email_us">อีเมลถึงเรา</a>
+        <a class="btn ghost" href="mailto:contact@baumechemical.com" data-i18n-key="btn_email_us">อีเมลถึงเรา</a>
         <a class="btn" href="https://maps.app.goo.gl/cLVdw1rxJRDc2BC29" target="_blank" rel="noopener" data-i18n-key="btn_open_map">เปิดแผนที่</a>
       </div>
     </div>
@@ -363,7 +363,7 @@
 
         <div class="actions inline">
           <button class="btn" type="submit" id="sendBtn" data-i18n-key="send_btn">ส่งอีเมลของฉัน</button>
-          <a class="btn ghost" id="altMail" href="mailto:baumechemical@gmail.com" data-i18n-key="send_alt">หรือส่งเมลเอง</a>
+          <a class="btn ghost" id="altMail" href="mailto:contact@baumechemical.com" data-i18n-key="send_alt">หรือส่งเมลเอง</a>
         </div>
 
         <div class="status" id="statusMsg" aria-live="polite"></div>
@@ -378,7 +378,7 @@
         <li><span data-i18n-key="phone_label">โทรศัพท์</span> : <a href="tel:+6628696400">02 869 6400</a> – <a href="tel:+6628696402">02 869 6402</a></li>
         <li><span data-i18n-key="mobile_label">มือถือ</span> : <a href="tel:+66925469887">092 546 9887</a></li>
         <li><span data-i18n-key="line_label">Line</span> : <a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener" data-i18n-key="line_cta">เพิ่มเพื่อน/แชทกับเรา</a></li>
-        <li><span data-i18n-key="email_cs_label">อีเมลฝ่ายบริการลูกค้า</span> : <a href="mailto:baumechemical@gmail.com">baumechemical@gmail.com</a></li>
+        <li><span data-i18n-key="email_cs_label">อีเมลฝ่ายบริการลูกค้า</span> : <a href="mailto:contact@baumechemical.com">contact@baumechemical.com</a></li>
       </ul>
     </aside>
   </main>
@@ -436,7 +436,7 @@
         <section aria-label="ติดต่อเรา">
           <h3 class="footer-title" data-i18n-key="footer_contact">ติดต่อเรา</h3>
           <ul class="footer-list">
-            <li data-i18n-key="footer_email">✉️ : <a href="mailto:baumechemical@gmail.com">baumechemical@gmail.com</a></li>
+            <li data-i18n-key="footer_email">✉️ : <a href="mailto:contact@baumechemical.com">contact@baumechemical.com</a></li>
             <li data-i18n-key="footer_line">💬 : <a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener">@baumechemical</a></li>
             <li data-i18n-key="footer_web">🌐 : <a href="https://www.baumechemical.com/">baumechemical.com</a></li>
           </ul>
@@ -526,7 +526,7 @@
         addr2: "📍 เขต ภาษีเจริญ กรุงเทพมหานคร 10160",
         hours: "🕒 เวลาทำการ 08.00 - 17.00 น.",
         phone_li: "📱 <a href=\"tel:+66925469887\">092 546 9887</a>",
-        footer_email: "✉️ : <a href=\"mailto:baumechemical@gmail.com\">baumechemical@gmail.com</a>",
+        footer_email: "✉️ : <a href=\"mailto:contact@baumechemical.com\">contact@baumechemical.com</a>",
         footer_line: "💬 : <a href=\"https://line.me/ti/p/~baumechemical\" target=\"_blank\" rel=\"noopener\">@baumechemical</a>",
         footer_web: "🌐 : <a href=\"https://www.baumechemical.com/\">baumechemical.com</a>",
         copyright: "© 2025 Baume Chemical. All rights reserved.",
@@ -576,7 +576,7 @@
         addr2: "📍 Phasi Charoen, Bangkok 10160",
         hours: "🕒 Hours 08:00 – 17:00",
         phone_li: "📱 <a href=\"tel:+66925469887\">+66 92 546 9887</a>",
-        footer_email: "✉️ : <a href=\"mailto:baumechemical@gmail.com\">baumechemical@gmail.com</a>",
+        footer_email: "✉️ : <a href=\"mailto:contact@baumechemical.com\">contact@baumechemical.com</a>",
         footer_line: "💬 : <a href=\"https://line.me/ti/p/~baumechemical\" target=\"_blank\" rel=\"noopener\">@baumechemical</a>",
         footer_web: "🌐 : <a href=\"https://www.baumechemical.com/\">baumechemical.com</a>",
         copyright: "© 2025 Baume Chemical. All rights reserved.",
@@ -696,7 +696,7 @@
         const body = encodeURIComponent((lang==='th'
           ? `กรุณาติดต่อกลับที่อีเมลนี้: ${email}`
           : `Please contact me back at this email: ${email}`));
-        window.location.href = `mailto:baumechemical@gmail.com?subject=${subject}&body=${body}`;
+        window.location.href = `mailto:contact@baumechemical.com?subject=${subject}&body=${body}`;
       }finally{
         lock(false, t);
       }
