--- a/products.html
+++ b/products.html
@@ -396,7 +396,7 @@
         <section aria-label="ติดต่อเรา">
           <h3 class="footer-title" data-i18n-key="footer_contact">ติดต่อเรา</h3>
           <ul class="footer-list">
-            <li>✉️ : <a href="mailto:baumechemical@gmail.com">baumechemical@gmail.com</a></li>
+            <li>✉️ : <a href="mailto:contact@baumechemical.com">contact@baumechemical.com</a></li>
             <li>💬 : <a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener">@baumechemical</a></li>
             <li>🌐 : <a href="https://www.baumechemical.com/">baumechemical.com</a></li>
           </ul>
@@ -420,7 +420,7 @@ const PRODUCTS = [
            en:["pretreatment","cleaning","degreaser","ultrasonic","acid","alkaline"] },
     img:"https://i.imgur.com/QfsLZ0I.jpeg",
     href:"products/pretreatment/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: เคมีล้างผิวงาน",
+    mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: เคมีล้างผิวงาน",
     tds:"https://www.baumechemical.com/docs/tds/pretreatment-cleaning.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
   },
@@ -433,7 +433,7 @@ const PRODUCTS = [
            en:["plating","zinc","nickel","copper","brass","white bronze"] },
     img:"https://i.imgur.com/DzCh11Q.jpeg",
     href:"products/platingcoating/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยาชุบโลหะ",
+    mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยาชุบโลหะ",
     tds:"https://www.baumechemical.com/docs/tds/metal-plating.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
   },
@@ -446,7 +446,7 @@ const PRODUCTS = [
            en:["blackening","black oxide","steel","brass","aluminium"] },
     img:"https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg",
     href:"products/blackening/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยารมดำ",
+    mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยารมดำ",
     tds:"https://www.baumechemical.com/docs/tds/blackening.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
   },
@@ -459,7 +459,7 @@ const PRODUCTS = [
            en:["passivation","chromate","trivalent","hex-free"] },
     img:"https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg",
     href:"products/passivation/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: โครเมตบนซิงค์",
+    mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: โครเมตบนซิงค์",
     tds:"https://www.baumechemical.com/docs/tds/passivation-zinc.pdf",
     specs:{ph:"—", temp:"—", current:"—"},
     swatches:["#b7d3ff","#ffe07a","#3b3b3b","#a5b38b"]
@@ -473,7 +473,7 @@ const PRODUCTS = [
            en:["stripper","deplate","paint remover","coating remover"] },
     img:"https://img2.pic.in.th/pic/thumbnail-4.jpg",
     href:"products/strippers/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยาลอกต่างๆ",
+    mail:"mailto:contact@baumechemical.com.com?subject=ขอใบเสนอราคา: น้ำยาลอกต่างๆ",
     tds:"https://www.baumechemical.com/docs/tds/selective-strippers.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
   },
@@ -486,7 +486,7 @@ const PRODUCTS = [
            en:["polishing","bright dip","electropolish"] },
     img:"https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg",
     href:"products/polishing/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยากัดเงา",
+    mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยากัดเงา",
     tds:"https://www.baumechemical.com/docs/tds/chemical-polishing.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
   },
@@ -499,7 +499,7 @@ const PRODUCTS = [
            en:["topcoat","sealant","anti-tarnish"] },
     img:"https://i.imgur.com/tP3buYl.jpeg",
     href:"products/protective/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยารักษาผิวชุบให้คงทน",
+    mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยารักษาผิวชุบให้คงทน",
     tds:"https://www.baumechemical.com/docs/tds/protective-treatment.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
   },
@@ -512,7 +512,7 @@ const PRODUCTS = [
            en:["service","on-site","technical","titration","QA"] },
     img:"https://img2.pic.in.th/pic/thumbnail-6.jpg",
     href:"products/service/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=ติดต่อทีมเทคนิค: บริการหน้างาน",
+    mail:"mailto:contact@baumechemical.com?subject=ติดต่อทีมเทคนิค: บริการหน้างาน",
     specs:{ph:"—", temp:"—", current:"—"}
   },
   {
@@ -524,7 +524,7 @@ const PRODUCTS = [
            en:["equipment","tools","anode basket","filter","heater"] },
     img:"https://i.imgur.com/BiTxYRw.jpeg",
     href:"products/equipment/index.html",
-    mail:"mailto:baumechemical@gmail.com?subject=สอบถามราคา: วัสดุอุปกรณ์",
+    mail:"mailto:contact@baumechemical.com?subject=สอบถามราคา: วัสดุอุปกรณ์",
     specs:{ph:"—", temp:"—", current:"—"}
   }
 ];
