--- a/about-us.html
+++ b/about-us.html
@@ -426,7 +426,7 @@
         </div>
         <div class="buttons">
           <a class="btn" href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener" data-i18n-key="cta_btn_line">แอด LINE</a>
-          <a class="btn outline" href="mailto:baumechemical@gmail.com" data-i18n-key="cta_btn_mail">ส่งอีเมล</a>
+          <a class="btn outline" href="mailto:contact@baumechemical.com" data-i18n-key="cta_btn_mail">ส่งอีเมล</a>
         </div>
       </div>
     </div>
@@ -482,7 +482,7 @@
         <section aria-label="ติดต่อเรา">
           <h3 class="footer-title">ติดต่อเรา</h3>
           <ul class="footer-list">
-            <li>✉️ : <a href="mailto:baumechemical@gmail.com">baumechemical@gmail.com</a></li>
+            <li>✉️ : <a href="mailto:contact@baumechemical.com">contact@baumechemical.com</a></li>
             <li>💬 : <a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener">@baumechemical</a></li>
             <li>🌐 : <a href="https://www.baumechemical.com/">baumechemical.com</a></li>
           </ul>
