upload all files

--- a/products/pretreatment/soakclean.html
+++ b/products/pretreatment/soakclean.html
@@ -282,7 +282,7 @@
 
     <div class="cta">
       <a class="btn" href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener" data-i18n-key="cta_chat">คุยกับทีมเทคนิค</a>
-      <a class="btn ghost" href="mailto:baumechemical@gmail.com?subject=Request%20info%3A%20Degreaser%20B1%20%2F%20E60" data-i18n-key="cta_quote">ขอข้อมูล/ใบเสนอราคา</a>
+      <a class="btn ghost" href="mailto:contact@baumechemical.com?subject=Request%20info%3A%20Degreaser%20B1%20%2F%20E60" data-i18n-key="cta_quote">ขอข้อมูล/ใบเสนอราคา</a>
     </div>
   </main>
 
@@ -321,7 +321,7 @@
         <section aria-label="ติดต่อเรา">
           <h3 class="footer-title" data-i18n-key="footer_contact">ติดต่อเรา</h3>
           <ul class="footer-list">
-            <li>✉️ : <a href="mailto:baumechemical@gmail.com">baumechemical@gmail.com</a></li>
+            <li>✉️ : <a href="mailto:contact@baumechemical.com">contact@baumechemical.com</a></li>
             <li>💬 : <a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener">@baumechemical</a></li>
             <li>🌐 : <a href="https://www.baumechemical.com/">baumechemical.com</a></li>
           </ul>
