upload all files

--- a/products/polishing/aluminum-electropolishing-solution.html
+++ b/products/polishing/aluminum-electropolishing-solution.html
@@ -18,7 +18,7 @@
 <meta property="og:title" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing)">
 <meta property="og:description" content="ผิวเงาแบบกระจก ลบคมไว ไม่มีควัน NOx • 65–80 °C • 12–24 V • 20–80 A/dm² • 2–16 นาที">
 <meta property="og:url" content="https://www.baumechemical.com/ep-8539.html">
-<meta property="og:image" content="https://i.imgur.com/HTuaHH8.jpeg">
+<meta property="og:image" content="https://img2.pic.in.th/pic/image0-5.jpeg">
 <meta property="og:image:alt" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing)">
@@ -80,7 +80,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/HTuaHH8.jpeg">
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/image0-5.jpeg">
 
   <style>
     :root{
@@ -110,7 +110,7 @@
       position:relative; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(380px, 60svh, 640px);
       background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)),
-                 url('https://i.imgur.com/HTuaHH8.jpeg') center/cover no-repeat;
+                 url('https://img2.pic.in.th/pic/image0-5.jpeg') center/cover no-repeat;
     }
     .hero h1{font-size:clamp(26px,4.2vw,46px);font-weight:800;text-shadow:0 6px 28px rgba(0,0,0,.45);margin:0 0 10px}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
