--- a/products/polishing/index.html
+++ b/products/polishing/index.html
@@ -308,7 +308,7 @@
 
       <!-- Aluminium -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/HTuaHH8.jpeg" alt="Aluminum Polishing"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image0-5.jpeg" alt="Aluminum Polishing"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Hot Dip / Electro</span><span class="badge">Fast Shine</span></div>
           <h3 data-i18n-key="al_title">อะลูมิเนียม (Hot Dip / Electro)</h3>
