--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
       <div class="content">
         <h3 data-i18n-key="band_title">บริการหน้างานโดยทีมเทคนิค</h3>
         <p data-i18n-key="band_text">ช่วยติดตั้งบ่อชุบ วิเคราะห์ความเข้มข้นของสารเคมีในน้ำยา (Titration), วางแผนเติมเคมีหรือเปลี่ยนน้ำยา, และจัดทำมาตรฐานคุณภาพให้ผลิตงานได้สม่ำเสมอ</p>
-        <a class="btn" href="contact-us.html" data-i18n-key="band_cta">เริ่มต้นใช้งาน</a>
+        <a class="btn" href="https://www.baumechemical.com/blog/" data-i18n-key="band_cta">บทความ & คู่มือ</a>
       </div>
     </div>
   </section>
@@ -763,7 +763,7 @@ ${form.message.value.trim()}`
 
         band_title: "บริการหน้างานโดยทีมเทคนิค",
         band_text: "ช่วยติดตั้งบ่อชุบ วิเคราะห์ความเข้มข้นของสารเคมีในน้ำยา (Titration), วางแผนเติมเคมีหรือเปลี่ยนน้ำยา, และจัดทำมาตรฐานคุณภาพให้ผลิตงานได้สม่ำเสมอ",
-        band_cta: "เริ่มต้นใช้งาน",
+        band_cta: "บทความ & คู่มือ",
 
         sec_testi: "ลูกค้าบอกต่อ",
         sec_testi_lead: "ผลลัพธ์จริงจากหน้างาน",
