upload all files

--- a/products/platingcoating/cyanide-free-white-bronze/index.html
+++ b/products/platingcoating/cyanide-free-white-bronze/index.html
@@ -201,10 +201,10 @@
       <!-- Primary Navigation -->
       <nav class="primary-nav" aria-label="Primary">
         <ul class="menu">
-          <li><a href="https://www.baumechemical.com/index/" class="nav-link">Home</a></li>
-          <li><a href="https://www.baumechemical.com/about-us/" class="nav-link">About us</a></li>
-          <li><a href="https://www.baumechemical.com/products/" class="nav-link" aria-current="page">Products</a></li>
-          <li><a href="https://www.baumechemical.com/contact-us/" class="nav-link">Contact Us</a></li>
+          <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
+          <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
+          <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
+          <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
         </ul>
       </nav>
     </div>
