--- a/products/platingcoating/electrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/index.html
@@ -285,7 +285,7 @@
       </div>
 
       <div class="actions">
-        <a class="btn" href="/products.html" data-i18n-key="btn_products">ดูหมวดผลิตภัณฑ์</a>
+        <a class="btn" href="https://www.baumechemical.com/products.html" data-i18n-key="btn_products">ดูหมวดผลิตภัณฑ์</a>
         <a class="btn ghost" href="https://www.baumechemical.com/contact-us/" data-i18n-key="btn_consult">ปรึกษาทีมเทคนิค</a>
       </div>
     </div>
